--- a/src/app/components/project/board-view/board-view.component.scss
+++ b/src/app/components/project/board-view/board-view.component.scss
@@ -29,7 +29,6 @@
 .card-board {
     background-color: white;
     display: flex;
-    padding: 0.75rem;
     flex-direction: column;
     border-radius: 0.375rem;
     border-width: 1px;
@@ -45,6 +44,26 @@
 .section-title:hover,
 .card-board:hover {
     border-color: var(--tui-border-focus);
+}
+
+.card-title {
+    display: inline-block;
+    padding: 0.5rem;
+    margin-bottom: auto;
+    vertical-align: middle;
+}
+
+.completed-task {
+    color: #6d6e6fd3;
+}
+
+.card-border {
+    width: 98%;
+    margin: 5px auto 0 auto;
+}
+
+.card-footer {
+    padding: 5px 12px;
 }
 
 .cdk-drag-preview {
