Logo and favicon

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <header tuiNavigationHeader>
     <span tuiNavigationLogo>
-        <span tuiFade class="text-lg">Ordo</span>
+        <img src="assets/img/logo.svg" alt="Ordo logo" />
     </span>
     <hr />
     <button [style.border-radius.%]="100" [tuiDropdown]="content" [(tuiDropdownOpen)]="openMenu">
