--- a/src/app/pages/project/project.component.html
+++ b/src/app/pages/project/project.component.html
@@ -10,7 +10,7 @@
             <ng-template #sectionOptions>
                 <tui-data-list tuiDataListDropdownManager size="s">
                     <button iconStart="@tui.trash" tuiOption type="button" class="!text-[var(--tui-text-negative)]"
-                        (click)="deleteProject()">
+                        (click)="confirmDelete()">
                         Delete project
                     </button>
                 </tui-data-list>
