--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,7 +22,7 @@
     background-color: #2e2e2ed1;
 }
 
-[tuiAppearance][data-appearance=primary] {
+[type="checkbox"][tuiAppearance][data-appearance=primary] {
     background: var(--success-color);
 }
 
