Confirm delete section and confirm delete task

--- a/src/app/components/project/board-view/board-view.component.html
+++ b/src/app/components/project/board-view/board-view.component.html
@@ -14,7 +14,7 @@
                 <ng-template #sectionOptions>
                     <tui-data-list tuiDataListDropdownManager size="s">
                         <button iconStart="@tui.trash" tuiOption type="button" class="!text-[var(--tui-text-negative)]"
-                            (click)="deleteSection(section)">
+                            (click)="confirmDeleteSection(section)">
                             Delete section
                         </button>
                     </tui-data-list>
