--- a/src/app/dialogs/task-detail-dialog/task-detail-dialog.component.html
+++ b/src/app/dialogs/task-detail-dialog/task-detail-dialog.component.html
@@ -17,7 +17,7 @@
             <ng-template #taskOptions>
                 <tui-data-list tuiDataListDropdownManager size="s">
                     <button iconStart="@tui.trash" tuiOption type="button" class="!text-[var(--tui-text-negative)]"
-                        (click)="deleteTask()">
+                        (click)="confirmDeleteTask()">
                         Delete task
                     </button>
                 </tui-data-list>
