--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="container mx-auto p-8">
     <div tuiHeader="m">
-        <h2 tuiTitle class="flex items-center !flex-row">Projects <span
+        <h2 tuiTitle class="flex items-center !flex-row">{{ 'COMMON.PROJECTS' | translate }}<span
                 class="text-lg">({{projects?.length}}/{{MAX_PROJECTS}})</span>
         </h2>
     </div>
@@ -20,7 +20,7 @@
             class="dashboard-card cursor-pointer transition duration-300 ease-in-out transform hover:scale-110"
             [routerLink]="['/new-project']">
             <h2 tuiTitle class="w-full h-full flex justify-center items-center !text-[var(--color-text-weak)]">
-                <tui-icon icon="@tui.plus" class="text-xl" /> Add project
+                <tui-icon icon="@tui.plus" class="text-xl" /> {{ 'COMMON.ADDPROJECT' | translate }}
             </h2>
     </div>
     }
