--- a/src/app/pages/settings/settings.component.html
+++ b/src/app/pages/settings/settings.component.html
@@ -3,7 +3,7 @@
     <form [formGroup]="urlForm" class="card-container">
         <div>
             <label tuiLabel>
-                <span class="label-text">Name</span>
+                <span class="label-text">{{ 'COMMON.NAME' | translate }}</span>
                 <tui-input formControlName="userName" class="w-full no-shadow-input" tuiTextfieldSize="m"
                     [tuiTextfieldLabelOutside]="true">
                     <input tuiTextfieldLegacy />
@@ -13,7 +13,7 @@
 
         <div class="mt-4">
             <label tuiLabel>
-                <span class="label-text">Email</span>
+                <span class="label-text">{{ 'COMMON.EMAIL' | translate }}</span>
                 <tui-input formControlName="email" class="w-full no-shadow-input" tuiTextfieldSize="m"
                     [tuiTextfieldLabelOutside]="true">
                     <input tuiTextfieldLegacy />
